tests/negative/gold/interface-cycle4-test.gold
tests/negative/interface-cycle4-test.toit:5:11: error: Cycle in interface chain
interface A implements C D:
          ^
tests/negative/interface-cycle4-test.toit:5:24: error: This clause contributes to the cycle
interface A implements C D:
                       ^
tests/negative/interface-cycle4-test.toit:9:13: error: This clause contributes to the cycle
interface C B:
            ^
tests/negative/interface-cycle4-test.toit:7:13: error: This clause contributes to the cycle
interface B A:
            ^
Compilation failed
